# shelf_scanning

barcode_detector/: CMakeLists.txt  package.xml
barcode_detector/launch/: refills_find_barcode.launch
barcode_detector/src/: barcode_detector.cpp
barcode_tf_publisher/: CMakeLists.txt  package.xml  setup.py
barcode_tf_publisher/scripts/: barcode_tf_publisher.py
separator_marker_detector/: CMakeLists.txt  package.xml
separator_marker_detector/launch/: detector.launch  detector_arrina.launch
separator_marker_detector/src/: separator_marker_detector.cpp
