<?xml version="1.0"?>
<package format="2">
  <name>barcode_detector</name>
  <version>0.0.0</version>
  <description>The barcode_detector package</description>

  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>


  <license>GPLv2+</license>


  <!-- <url type="website">http://wiki.ros.org/barcode_detector</url> -->


  <!--author email="jane.doe@example.com">Jane Doe</author-->


  <buildtool_depend>catkin</buildtool_depend>
  <depend>refills_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>asr_halcon_bridge</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
