<?xml version="1.0"?>
<package format="2">
  <name>separator_marker_detector</name>
  <version>0.0.0</version>
  <description>The separator_marker_detector package</description>

  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>


  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>refills_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>asr_halcon_bridge</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
